# ducky-home-lipstick

./: CMakeLists.txt
src/: CMakeLists.txt  duckywindowmodel.cpp  duckywindowmodel.h  main.cpp
src/qml/: AppLauncher.qml  Compositor.qml  LockScreen.qml  MainScreen.qml  StatusBar.qml  Wallpaper.qml
src/qml/applauncher/: LauncherItemDelegate.qml
src/qml/compositor/: Wallpaper.qml  WindowWrapperBase.qml
src/qml/mainscreen/: AppGrid.qml  FeedPage.qml
src/qml/statusbar/: BatteryIndicator.qml
src/qml/volumecontrol/: VolumeControl.qml
